Thu Nov 24 18:25:58 2005  Tim Janik  <timj@imendio.com>

	* gtk/gtkmenushell.h (struct _GtkMenuShellClass): moved ::close signal
	vmethod handler to structure end and removed a reseved function pointer.
	this restore binary compatibility with GtkMenuShell from gtk+-2.6.10.

Thu Nov 24 18:06:08 2005  Tim Janik  <timj@imendio.com>

	* gtk/gtkcalendar.h: removed ::erroneous_date and ::selected_date 
	vmethods from GtkCalendarClass. this restores binary compatibility
	of the calendar ABI with gtk+-2.6.10.

	* gtk/gtkcalendar.c:
	gtk_calendar_class_init(): create ::erroneous_date and ::selected_date
	signals without a default handler.

2005-11-14  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcellrenderertoggle.c: merged removal of redundant
	g_object_notify() from upstream. Some formatting cleanups.

Tue Nov  8 17:05:20 2005  Tim Janik  <timj@imendio.com>

	* configure.in:
	* gtk/gtklabel.c: removed outdated DISABLE_KEYBOARD_SHORTCUTS
	handling case. whitespace fixups according to upstream.

2005-11-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcalendar.c (gtk_calendar_class_init), (gtk_calendar_init),
	(gtk_calendar_set_month_prev), (gtk_calendar_set_month_next),
	(gtk_calendar_set_year_prev), (gtk_calendar_set_year_next),
	(gtk_calendar_main_button), (gtk_calendar_select_month),
	(gtk_calendar_button_press), (gtk_calendar_paint_arrow),
	(gtk_calendar_key_press), (gtk_calendar_set_property),
	(gtk_calendar_get_property): replaced style properties 'min-year' and
	'max-year' with corresponding new class properties
	N#19283, N#19648

2005-11-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_button_release,
	gtk_tree_view_motion_bin_window): Free leaked GtkTreePaths
	N#20677

2005-11-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Making the builtin stock icons available again.

	* gtk/gtkiconfactory.c: Revert the previous stock icons patch.
	* gtk/gtkicontheme.c (theme_lookup_icons): Consider builtin stock